# MarkdownReader

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: index.html  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
