[package]
name = "markdown-reader"
version = "0.1.3+1"
edition = "2021"

[lib]
name = "markdown_reader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
fontdb = "0.16"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
